update in conncetion and rthe admin

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
               </div>
             </div>
             <div class="floating-equations-new">
-              <div class="equation-item floating-element" style="--delay: 0s;" data-float-amplitude="15" data-float-period="3">y = mx + c</div>
+              <div class="equation-item floating-element" style="--delay: 0s;" data-float-amplitude="15" data-float-period="3">f(x) = x² + 2x - 3</div>
               <div class="equation-item floating-element" style="--delay: 1s;" data-float-amplitude="20" data-float-period="4">a² + b² = c²</div>
               <div class="equation-item floating-element" style="--delay: 2s;" data-float-amplitude="18" data-float-period="3.5">V = πr²h</div>
               <div class="equation-item floating-element" style="--delay: 3s;" data-float-amplitude="22" data-float-period="5">sin²θ + cos²θ = 1</div>
