--- a/views/Student/partials/header.ejs
+++ b/views/Student/partials/header.ejs
@@ -7,7 +7,7 @@
   <title><%= title %> | Mr Moharram - Student Portal</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/images/logo.png" type="image/x-icon">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
